additional test to fix partitioning error